--- a/Baseball2024.css
+++ b/Baseball2024.css
@@ -54,7 +54,7 @@ input, button{
     height: 100%;
 
 }
-.nav-button:hover{
+.unselected:hover{
     background: radial-gradient(circle, #8888FF, #AAAAFF);
 }
 .selected{
@@ -97,15 +97,21 @@ tr:nth-child(even){
     color: black;
     border: 1px solid black;
     text-overflow: ellipsis;
-    max-width: 150px;
+    width: 150px;
     max-height: 100px;
 }
 .move-team-btn{
     background: #AAAAFF;
     color: black;
     border: 1px solid black;
+    border-radius:18px;
     padding: 5px;
-    font-size: 16px;
     cursor: pointer;
-    margin-top: 80%;
+    margin: 5px;
+}
+.btn-container{
+    display: flex;
+    align-items: center; 
+    justify-content: center;
+
 }
