--- a/Baseball2024.css
+++ b/Baseball2024.css
@@ -96,8 +96,8 @@ tr:nth-child(even){
     background: #AAAAFF;
     color: black;
     border: 1px solid black;
-    text-overflow: ellipsis;
-    width: 150px;
+    text-overflow: none;
+    width: 200px;
     max-height: 100px;
 }
 .move-team-btn{
